# aaron-rust-project

./: .gitignore  .vercelignore  Cargo.toml  README.md  build_run_local.sh  clean_deploy.sh  vercel.json
api/: movies.rs
public/: movie.html
